--- a/make/Makefile
+++ b/make/Makefile
@@ -1,5 +1,8 @@
 # this is a comment
 
+# target: dependencies
+# 	action
+
 # variables
 CC=g++ # compiler
 CFLAGS=-c -Wall # compiler flags
@@ -11,13 +14,13 @@ all: $(OUT)
 allrun: $(OUT)
 	.\$(OUT)
 
-$(OUT): main.o func.o # dependencies
+$(OUT): main.o func.o
 	$(CC) main.o func.o -o $(OUT)
 
 main.o: main.cpp
 	$(CC) $(CFLAGS) main.cpp
 
-func.o: func.cpp
+func.o: func.cpp func.h
 	$(CC) $(CFLAGS) func.cpp
 
 clean:
